--- a/app/views/layouts/header.html
+++ b/app/views/layouts/header.html
@@ -20,7 +20,7 @@
                     <i class="caret"></i>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-right icons-right">
-                    <li><a href ui-sref="login"><i class="icon-exit"></i> Logout</a></li>
+                    <li><a href="javascript:void(0);" ng-click="logout()"><i class="icon-exit"></i> Logout</a></li>
                 </ul>
             </li>
         </ul>
