add pick date range

--- a/app/views/items/game/game.html
+++ b/app/views/items/game/game.html
@@ -1,9 +1,9 @@
-﻿<div class="dataRange" pick-data-range></div>
-sp-start: {{dataRang.sp_startTime}} 
-sp-end: {{dataRang.sp_endTime}} </br>
+﻿<div class="dateRange" pick-date-range date-obj="dateRange"></div>
+sp-start: {{dateRange.s_startDate}} 
+sp-end: {{dateRange.s_endDate}} </br>
 到 <br>
-ep-start: {{dataRang.ep_startTime}} 
-ep-end: {{dataRang.ep_endTime}} </br>
+ep-start: {{dateRange.e_startDate}} 
+ep-end: {{dateRange.e_endDate}} </br>
 
 
 <div class="block">
