--- a/app/views/items/game/game.html
+++ b/app/views/items/game/game.html
@@ -5,6 +5,8 @@ sp-end: {{dateRange.s_endDate}} </br>
 ep-start: {{dateRange.e_startDate}} 
 ep-end: {{dateRange.e_endDate}} </br>
 
+<input type="button" ng-click="destroy" />
+
 
 <div class="block">
 	<h6 class="heading-hr"><i class="icon-file"></i> 游戏列表</h6>
